# pjsk-emoji-maker

./: .gitignore  =9.0.0  CHANGELOG.md  COMPLETION_CHECKLIST.md  IMAGE_IMPORT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_FLOW_IMPLEMENTATION.md  LIST_COMMANDS_IMPLEMENTATION.md  MANIFEST.in  MESSAGING_COMPLETION.md  PARAMETER_PARSING_FIX.md  QUICK_START.md  README.md  RENDERER_IMPLEMENTATION_SUMMARY.md  STATE_MANAGER_FIX.md  TICKET_SOLUTION_SUMMARY.md  __init__.py  _conf_schema.json  config.py  integration_test.py  main.py  manual_test_list_commands.py  metadata.yaml  persistence.py  pyproject.toml  pytest.ini  renderer.py  requirements-dev.txt  requirements.txt  test_image_access.py
config/: pjsk_config.yaml
data/: pjsk_states.json
docs/: ATTRIBUTION.md  MESSAGING_IMPLEMENTATION.md  MESSAGING_README.md  README.md  RENDERER_SETUP.md  development.md  list_commands_implementation.md  messaging_adapter.md  messaging_integration_example.py  migration-plan.md  project_summary.md  testing.md
pjsk_emoji/: __init__.py  domain.py  messaging.py  mock_renderer.py  models.py  renderer.py  session.py  utils.py
pjsk_emoji/assets/: characters.json
pjsk_emoji/assets/emoji_images/: README.md
pjsk_emoji/assets/fonts/: README.md
pjsk_emoji/assets/templates/: card_template.html  list_template.html
scripts/: generate_placeholder_images.py  quick_renderer_test.py  setup_renderer.sh
tests/: conftest.py  mock_astrbot.py  test_adjust_commands.py  test_config.py  test_draw_koishi.py  test_integration.py  test_list_commands.py  test_messaging.py  test_persistence.py  test_plugin.py  test_renderer.py  test_renderer_smoke.py  test_select_validation.py  test_utils.py
